--- a/style.css
+++ b/style.css
@@ -48,18 +48,25 @@ html,body{
 
 }
 #elem h2{
-    font-weight: 500;
+    font-weight: 600;
+    font-size: 22px;
 }
 .box{
     color: black;
     font-weight: 800;
-    font-size: 35px;
+    font-size: 25px;
     padding: 10px 20px;
     background-color: #fff;
     border-radius: 5px;
 
 }
 #pbtm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    padding: 20px;
   width: 100%;
   height: calc(100% - 100px);
 
@@ -69,9 +76,14 @@ html,body{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 20px;
-    height: 20px;
+    width: 60px;
+    height: 60px;
     background-color: rgb(72, 104, 72);
     color: #fff;
     border-radius: 50%;
+    font-weight: 500;
+}
+.bubble:hover{
+    cursor: pointer;
+    background-color: rgb(50, 75, 50);
 }
